--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@fontsource-variable/josefin-sans": "^5.1.0",
     "@fontsource-variable/playfair-display": "^5.1.0",
     "astro": "^4.16.13",
