--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@astrojs/vercel": "^7.8.2",
     "@fontsource-variable/josefin-sans": "^5.1.0",
     "@fontsource-variable/playfair-display": "^5.1.0",
+    "@types/node": "^18",
     "astro": "^4.16.13",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@vercel/node": "^3.2.26"
   }
 }
